[package]
name = "saunameter"
version = "0.1.0"
authors = ["sigurd4 <sigurd-s@online.no>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "saunameter"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
ufmt_float = {version = "0.2.0", features = ["micromath"]}
nb = "1.1.0"
embedded-hal = "1.0"

lcd-lcm1602-i2c = "=0.3.0"
embedded-dht-rs = { version = "0.5.0", features = ["dht22"] }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
features = ["arduino-mega2560"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
